# rust-todo

./: Cargo.toml  build.rs  list.txt  todos copy.db  todos.db  todos.db__
src/: main.rs  tests.rs  todolist.rs  todolist_file.rs
static/assets/: common.css  script.js
templates/: home.html  index.html  user.html
