[package]
edition = "2018"
name = "rust-todo"
version = "0.2.0"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-files = "0.5.0"
ansi_term = "0.12"
askama = "0.8"
serde = { version = "1.0", features = ["derive"] }
actix-web-static-files = "3.0"
global_counter = "0.2.2"

[build-dependencies]
actix-web-static-files = "3.0"

[dependencies.rusqlite]
version = "0.26.0"
features = ["bundled"]